--- a/cyanobacteria.css
+++ b/cyanobacteria.css
@@ -2,7 +2,7 @@
 
 
   header {
-    background: url("https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/bugbanner.png?v=1744905666351");
+    background: url("thesis-assets/banner.png");
   }
 /* end dark mode styling */
 
